[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "health-policy-eval-kit"
version = "0.1.0"
description = "Reproducible tools for health-policy evaluation, beginning with panel interrupted time-series analysis."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
  {name = "Kris Wang"}
]
keywords = [
  "health policy",
  "interrupted time series",
  "panel data",
  "quasi-experimental",
  "reproducible research"
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Topic :: Scientific/Engineering"
]
dependencies = [
  "numpy>=1.26",
  "pandas>=2.0",
  "statsmodels>=0.14"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-cov>=5.0",
  "ruff>=0.6"
]

[project.urls]
Homepage = "https://github.com/arcwangyu/health-policy-eval-kit"
Issues = "https://github.com/arcwangyu/health-policy-eval-kit/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py310"
